# pybuilder

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  pyproject.toml
.pybuilder/receipts/: audit.json  ci-checks.json  intake.json  proof.json  reviewer.json  scaffold-integrity.json
examples/: selfgate.py
skill/: SKILL.md
skill/prompts/: judge.md  prd-intake-5whys.md  reviewer.md
skill/schemas/: intent-card.schema.json
skills/prd-writer/: SKILL.md
src/pybuilder/: __init__.py  bad_python.py  cli.py  dataset.py  examples_demo.py  flowgraph.py  gate.py  intent_card.py  judge.py  models.py  receipts.py  scaffold.py  stability.py
src/pybuilder/eval/: __init__.py  dimensions.py  results_bag.py  vector.py
tests/: test_bad_python.py  test_dataset.py  test_eval_harness.py  test_flowgraph.py  test_gate.py  test_intent_card.py  test_judge.py  test_scaffold.py  test_stability.py
