[project]
name = "pybuilder"
version = "0.1.0"
description = "PRD-driven, evaluation-gated Python code generation — the Python analog of /autobuilder, applying TDD-of-LLM-applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Joe Yen" }]
dependencies = []

# Optional capabilities. The core pipeline runs with zero third-party deps;
# these light up extra dimensions when present.
[project.optional-dependencies]
# Richer DataFrame aggregation/analysis. Core eval works on the stdlib csv module.
pandas = ["pandas>=2.0"]
# LLM-as-judge dimension. Degrades to `unavailable` when absent or unauthenticated.
judge = ["anthropic>=0.40"]
# pytest-harvest interop for teams that already use results_bag in their suites.
harvest = ["pytest-harvest>=1.10"]

[project.scripts]
pybuilder = "pybuilder.cli:main"

[dependency-groups]
dev = ["ruff>=0.6", "mypy>=1.11", "pytest>=8.0", "pytest-cov>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pybuilder"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
# A pragmatic-but-strict floor. BAD_PYTHON (pybuilder.bad_python) catches the
# semantic footguns ruff can't; ruff catches the lexical ones.
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "BLE"]
ignore = ["E501"]  # line length handled by the formatter, not the linter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
# Optional deps are imported lazily behind `try/except ImportError`.
[[tool.mypy.overrides]]
module = ["pandas.*", "anthropic.*", "pytest_harvest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["pybuilder"]
branch = true
